syntax = "proto3";

package components.users.v1;

option go_package = "github.com/grpc-methods-descriptor-example/components/users/v1;usersv1";

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
}

service UsersService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}
